<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS Virtual Tour</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_para">This is the welcoming paragraph.
        Such words.  Much welcome.  Wow. Some instructions would be here</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_para">These are the instructions for how to use the app.
        This is another paragraph of instructions.</string>
    <string name="scanner">Scanner</string>
    <string name="floor4">4th Floor</string>
    <string name="floor1">1st Floor</string>
    <string name="map">Map</string>
    <string name="cf420">CF 420</string>
    <string name="title_activity_stop">StopActivity</string>
    <string name="title_activity_qr">QRActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
