<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_map"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:contentDescription="@string/map" />

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" 
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_floor1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/floor1" />

                <Button
                    android:id="@+id/btn_floor4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/floor4" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="16sp" />
        
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_para" />

        <Button
            android:id="@+id/btn_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <Button
            android:id="@+id/btn_scanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scanner" />

        <LinearLayout
            android:id="@+id/list_stops"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </LinearLayout>

</ScrollView>